PoC of Markdown to RSS generation

--- a/src/main/resources/md/default.template.html
+++ b/src/main/resources/md/default.template.html
@@ -36,7 +36,7 @@
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                 <ul class="pure-menu-list">
-                    @:toc depth=1.
+                    @:toc depth=1 root="../md".
                 </ul>
                     </div>
             </nav>
