rss link added to html template

--- a/src/main/resources/md/default.template.html
+++ b/src/main/resources/md/default.template.html
@@ -36,6 +36,7 @@
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                 <ul class="pure-menu-list">
+                    <li><a href="rss/feed.xml">RSS</a></li>
                     @:toc depth=1 root="../md".
                 </ul>
                     </div>
