- 04-series markdown - css improvements - hardcoded rss for 04 - image for rss

--- a/src/main/resources/md/default.template.html
+++ b/src/main/resources/md/default.template.html
@@ -36,7 +36,11 @@
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                 <ul class="pure-menu-list">
-                    <li><a href="rss/feed.xml">RSS</a></li>
+                    <div class="toc">
+                        <ul>
+                        <li><a href="rss/feed.xml">RSS</a></li>
+                        </ul>
+                    </div>
                     @:toc depth=1 root="../md".
                 </ul>
                     </div>
