--- a/src/main/resources/md/default.template.html
+++ b/src/main/resources/md/default.template.html
@@ -39,6 +39,7 @@
                     <div class="toc">
                         <ul>
                         <li><a href="rss/feed.xml">RSS</a></li>
+                        <li><a href="https://itunes.apple.com/ru/podcast/scalalaz-podcast/id1156356598">iTunes</a></li>
                         </ul>
                     </div>
                     @:toc depth=1 root="../md".
