implement basic TOC generation

--- a/src/main/twirl/default_template.scala.html
+++ b/src/main/twirl/default_template.scala.html
@@ -39,8 +39,10 @@
                     <ul class="pure-menu-list">
                         <div class="toc">
                             <ul>
+                                <li><a href="/">Home</a></li>
                                 <li><a href="rss/feed.xml">RSS</a></li>
                                 <li><a href="https://itunes.apple.com/ru/podcast/scalalaz-podcast/id1156356598">iTunes</a></li>
+                                <li><a href="https://github.com/scalalaz-podcast/">GitHub</a></li>
                             </ul>
                         </div>
                     </ul>
