--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -7,6 +7,7 @@
     <title>@title</title>
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
     <!--[if lte IE 8]>
 
@@ -30,10 +31,11 @@
 <body>
 <div id="layout" class="pure-g">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
+        <div class="logo-box">
+            <!--img src="img/logo.png"-->
+        </div>
         <div class="header">
-            <h1 class="brand-title">Scalalaz подкаст</h1>
-            <h2 class="brand-tagline">мир Scala разработки</h2>
-            </br>
+            <h1 class="brand-title">Русскоязычный подкаст о Scala</h1>
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
