--- a/src/main/twirl/main_page.scala.html
+++ b/src/main/twirl/main_page.scala.html
@@ -1,4 +1,7 @@
-@(title: String, pages: Seq[EpisodePage])
+@(title: String,
+  pages: Seq[EpisodePage],
+  prev: Option[String],
+  next: Option[String])
 
 @template(title) {
  @for( p <- pages ) {
@@ -11,4 +14,14 @@
         <a href="@p.fileName" class="more-link">К странице выпуска</a>
     </section>
  }
+ <div class="pagination">
+     @for( link <- prev) {
+     <a href="@link" class="prev-page">Вперед →</a>
+     }
+
+     @for( link <- next) {
+     <a href="@link" class="next-page">← Назад</a>
+     }
+ </div>
+
 }
