--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/grids-responsive-min.css">
-    <link rel="stylesheet" href="css/layouts/blog.css">
+    <link rel="stylesheet" href="css/layouts/blog.css?=1">
 </head>
 
 <body>
