add twitter link to main page

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -37,6 +37,7 @@
                                 <li><a href="rss/feed.xml">RSS</a></li>
                                 <li><a href="https://itunes.apple.com/ru/podcast/scalalaz-podcast/id1156356598">iTunes</a></li>
                                 <li><a href="https://github.com/scalalaz-podcast/">GitHub</a></li>
+                                <li><a href="https://twitter.com/ScalalazPodcast">Twitter</a></li>
                             </ul>
                         </div>
                     </ul>
