--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -38,6 +38,7 @@
                                 <li><a href="https://itunes.apple.com/ru/podcast/scalalaz-podcast/id1156356598">iTunes</a></li>
                                 <li><a href="https://github.com/scalalaz-podcast/">GitHub</a></li>
                                 <li><a href="https://twitter.com/ScalalazPodcast">Twitter</a></li>
+                                <li><a href="mailto:info@@scalalaz.ru">Или пиши нам вот сюда: info@@scalalaz.ru</a></li>
                             </ul>
                         </div>
                     </ul>
