fix layout shift at css

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -58,6 +58,7 @@
             </nav>
         </div>
     </div>
+    <div class="content-holder">
     <div class="content pure-u-1 pure-u-md-3-4">
         <div class="posts">
             <h1 class="content-subhead">Post</h1>
@@ -65,8 +66,7 @@
                 @content
             </section>
         </div>
-
-
+    </div>
     </div>
 </div>
 
