--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<div id="layout" class="pure-g">
+<div id="layout">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
         <div class="logo-box"> </div>
         <div class="header">
