add special pages

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -34,6 +34,7 @@
                         <div class="toc">
                             <ul>
                                 <li><a href="/">Главная</a></li>
+                                <li><a href="special-page-01.html">Прочее</a></li>
                                 <li><a href="rss/feed.xml">RSS</a></li>
                                 <li><a href="https://itunes.apple.com/ru/podcast/scalalaz-podcast/id1156356598">iTunes</a></li>
                                 <li><a href="https://github.com/scalalaz-podcast/">GitHub</a></li>
