link on scala news

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -42,6 +42,10 @@
                                 <li><a href="https://www.patreon.com/scalalalaz">Patreon</a></li>
                                 <li><a href="mailto:info@@scalalaz.ru">Или пиши нам вот сюда: info@@scalalaz.ru</a></li>
                             </ul>
+                            <br/>
+                            <ul>
+                                <li><a href="https://scalanews.org/">Scala News</a></li>
+                            </ul>
                         </div>
                     </ul>
                 </div>
