--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -40,6 +40,7 @@
                                 <li><a href="https://github.com/scalalaz-podcast/">GitHub</a></li>
                                 <li><a href="https://twitter.com/ScalalazPodcast">Twitter</a></li>
                                 <li><a href="https://www.patreon.com/scalalalaz">Patreon</a></li>
+                                <li><a href="https://discord.gg/RnugmrU">Наш Discord канал</a></li>
                                 <li><a href="mailto:info@@scalalaz.ru">Или пиши нам вот сюда: info@@scalalaz.ru</a></li>
                             </ul>
                             <br/>
