--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -55,7 +55,10 @@
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
-                        <div class="toc">
+                        <div class="toc">                          
+                            <ul>
+                                <li><a href="https://discord.gg/RnugmrU">Discord - Чат подкаста</a></li>
+                            </ul>
                             <ul>
                                 <li><a href="https://telegram.me/scala_ru">Telegram - Scala User Group</a></li>
                             </ul>
