--- a/src/main/twirl/special_page.scala.html
+++ b/src/main/twirl/special_page.scala.html
@@ -1,13 +1,16 @@
+@import html.template
+@import ru.scalalaz.gen.Page
+
 @(page: Page)
 
 @template(page.title) {
 
-<h1>@page.settings.title</h1>
-<p class="pub-date">
-    Опубликовано: @page.settings.ISODate
-</p>
+    <h1>@page.settings.title</h1>
+    <p class="pub-date">
+        Опубликовано: @page.settings.ISODate
+    </p>
 
 
-@Html(page.asHtml)
+    @Html(page.asHtml)
 
 }
