Links to the main page

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -25,9 +25,9 @@
 <body>
 <div id="layout">
     <div class="sidebar pure-u-1 pure-u-md-1-4">
-        <div class="logo-box"> </div>
+        <div class="logo-box" onclick="location.href='/';"> </div>
         <div class="header">
-            <h1 class="brand-title">Русскоязычный подкаст о Scala</h1>
+            <h1 class="brand-title" onclick="location.href='/';">Русскоязычный подкаст о Scala</h1>
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
@@ -46,7 +46,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="brand-title">Scala чаты</h1>
+            <h1 class="nav-title">Scala чаты</h1>
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
@@ -61,7 +61,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="brand-title">Поддержи подкаст</h1>
+            <h1 class="nav-title">Поддержи подкаст</h1>
             <nav class="nav">
                 <div class="pure-menu custom-restricted-width">
                     <div class="patreon-wrapper">
