--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -23,13 +23,13 @@
 </head>
 
 <body>
-<div id="layout">
-    <div class="sidebar pure-u-1 pure-u-md-1-4">
+<div id="layout" class="pure-g">
+    <div class="sidebar pure-u-1 pure-u-md-1 pure-u-lg-1-4">
         <div class="logo-box" onclick="location.href='/';"> </div>
         <div class="sidebar-content">
             <h1 class="brand-title" onclick="location.href='/';">Русскоязычный подкаст о Scala</h1>
             <nav class="nav">
-                <div class="pure-menu custom-restricted-width">
+                <div class="pure-menu">
                     <ul class="pure-menu-list">
                         <div class="toc">
                             <ul>
@@ -48,7 +48,7 @@
             </nav>
             <h1 class="nav-title">Scala чаты</h1>
             <nav class="nav">
-                <div class="pure-menu custom-restricted-width">
+                <div class="pure-menu">
                     <ul class="pure-menu-list">
                         <div class="toc">
                             <ul>
@@ -63,7 +63,7 @@
             </nav>
             <h1 class="nav-title">Поддержи подкаст</h1>
             <nav class="nav">
-                <div class="pure-menu custom-restricted-width">
+                <div class="pure-menu">
                     <div class="patreon-wrapper">
                         <div style="line-height: 0;"><iframe src="https://www.patreon.com/platform/iframe?widget=become-patron-button&amp;redirectURI=https%3A%2F%2Fscalalaz.ru%2F&amp;creatorID=8074802" scrolling="no" allowtransparency="true" frameborder="0" class="patreon-widget" title="Patreon Widget" style="position: static; visibility: visible; width: 176px; height: 34px;"></iframe></div>
 @*                        <a href="https://www.patreon.com/bePatron?u=8074802" data-patreon-widget-type="become-patron-button">Поддержи подкаст!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>*@
@@ -72,15 +72,15 @@
             </nav>
         </div>
     </div>
-    <div class="content-holder">
-    <div class="content pure-u-1 pure-u-md-3-4">
-        <script async src="https://cse.google.com/cse.js?cx=017272479572758030482:gshsh3xysqx"></script>
-        <div class="gcse-search"></div>
-        <div class="posts">
-            <h1 class="content-subhead">Posts</h1>
-            @content
+    <div class="content-holder pure-u-1 pure-u-md-1 pure-u-lg-3-4">
+        <div class="content">
+            <script async src="https://cse.google.com/cse.js?cx=017272479572758030482:gshsh3xysqx"></script>
+            <div class="gcse-search-wrapper"><div class="gcse-search"></div></div>
+            <div class="posts">
+                <h1 class="content-subhead">Posts</h1>
+                @content
+            </div>
         </div>
-    </div>
     </div>
 </div>
 
