Fix patreon link

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -65,8 +65,7 @@
             <nav class="nav">
                 <div class="pure-menu">
                     <div class="patreon-wrapper">
-                        <div style="line-height: 0;"><iframe src="https://www.patreon.com/platform/iframe?widget=become-patron-button&amp;redirectURI=https%3A%2F%2Fscalalaz.ru%2F&amp;creatorID=8074802" scrolling="no" allowtransparency="true" frameborder="0" class="patreon-widget" title="Patreon Widget" style="position: static; visibility: visible; width: 176px; height: 34px;"></iframe></div>
-@*                        <a href="https://www.patreon.com/bePatron?u=8074802" data-patreon-widget-type="become-patron-button">Поддержи подкаст!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>*@
+                        <a href="https://www.patreon.com/bePatron?u=8074802" data-patreon-widget-type="become-patron-button">Поддержи подкаст!</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
                     </div>
                 </div>
             </nav>
