Revert deleting episode link

--- a/src/main/twirl/main_page.scala.html
+++ b/src/main/twirl/main_page.scala.html
@@ -14,6 +14,7 @@
                Опубликовано: @p.episode.settings.ISODate
            </p>
            @Html(p.episode.asHtml)
+           <a href="@p.fileName" class="more-link">К странице выпуска</a>
        </section>
     }
     <div class="pagination">
