Add episode 100 + favicon

--- a/src/main/twirl/template.scala.html
+++ b/src/main/twirl/template.scala.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/img/logo.png" type="image/png">
     <title>@title</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@@0.6.0/build/pure-min.css">
